fix shuffle error