@@ -24,6 +24,7 @@ import org.springframework.stereotype.Repository;
 import org.springframework.util.CollectionUtils;
 
 import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import static it.gov.pagopa.afm.calculator.service.UtilityComponent.isGlobal;
@@ -282,7 +283,7 @@ public class CosmosRepository {
         .filter(bundle -> digitalStampFilter(transferListSize, onlyMarcaBolloDigitale, bundle))
         // Gets the GLOBAL bundles and PRIVATE|PUBLIC bundles of the CI
         .filter(bundle -> globalAndRelatedFilter(paymentOptionMulti, bundle))
-        .toList();
+        .collect(Collectors.toList());
   }
 
   /**
@@ -305,7 +306,7 @@ public class CosmosRepository {
         .filter(bundle -> digitalStampFilter(transferListSize, onlyMarcaBolloDigitale, bundle))
         // Gets the GLOBAL bundles and PRIVATE|PUBLIC bundles of the CI
         .filter(bundle -> globalAndRelatedFilter(paymentOption, bundle))
-        .toList();
+        .collect(Collectors.toList());
   }
 
   /**
